  * Patchworks:
    + refreshed and simplified "launcher.patch".
    + new "fix-install.patch" to avoid trivial upstream FTBFS.
    - removed "unbundle_*" and "libpython" patches (no longer needed).
  * Build-Depends:
    - dh-autoreconf
    + cmake
    + autoconf
    + automake
    + libtool
    + libvsqlitepp-dev (de-coupled)
  * Reference implementation of get-orig-source and better clean-up.

 -- Dmitry Smirnov <onlyjob@debian.org>  Wed, 19 Jun 2013 12:12:31 +1000

mysql-workbench (5.2.47+dfsg-2) unstable; urgency=low

  * Use `readlink` to find libmysqlcppconn library (Closes: #711687).

 -- Dmitry Smirnov <onlyjob@debian.org>  Sun, 09 Jun 2013 04:46:02 +1000

mysql-workbench (5.2.47+dfsg-1) unstable; urgency=low

  * Upload to unstable.
  * New patch to get libpython flags using `python-config`
    (Closes: #710627).
  * Build-Depends:
    - python-all-dev
    + python-dev (provides `python-config`)
    - libboost-dev
    + libboost1.53-dev | libboost-dev (needed to avoid FTBFS since
      libmysqlcppconn depends on boost1.53 which conflicts with older
      boost that is pulled by libboost-dev).
  * rules: added "-v" to `mv` command (more build-time verbosity).
  * rules: get-orig-source improvements.
  * Dropped unused lintian-overrides

 -- Dmitry Smirnov <onlyjob@debian.org>  Wed, 05 Jun 2013 09:13:55 +1000

mysql-workbench (5.2.47+dfsg-1~exp0) experimental; urgency=low

  * New upstream release [February 2013].
  * Depends on "python-pyodbc (>= 2.1.8)" that is needed for ODBC
    database migration to MySQL. Thanks, Laurent Bigonville
    (Closes: #698969).
  * Build-Depends: libpng12-dev --> libpng-dev (transition).
  * Standards to 3.9.4.
  * Updated my email address.

 -- Dmitry Smirnov <onlyjob@debian.org>  Sat, 30 Mar 2013 01:10:38 +1100

mysql-workbench (5.2.45+dfsg-1~exp0) experimental; urgency=low

  * New upstream release [December 2012].
  * Added lintian-override for "broken symlink" to "libmysqlcppconn.so.6".
