@@ -1,13 +1,10 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.5.
-.TH MYSQL "1" "September 2012" "MySQL Workbench 5.2.42" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.43.2.
+.TH MYSQL "1" "June 2013" "MySQL Workbench CE (GPL) 6.0.2 10924" "mysql-workbench"
 .SH NAME
-MySQL \- mysql-workbench
-.SH DESCRIPTION
+mysql-workbench \- MySQL Database Design, Administration and Development Tool
+.SH SYNOPSIS
 mysql\-workbench [<options>] [<model file>]
-Options:
-.TP
-\fB\-\-admin\fR <instance>
-Open a administration tab to the named instance
+.SH OPTIONS
 .TP
 \fB\-\-force\-sw\-render\fR
 Force Xlib rendering
@@ -15,47 +12,47 @@ Force Xlib rendering
 \fB\-\-force\-opengl\-render\fR
 Force OpenGL rendering
 .TP
+\fB\-\-query\fR [<connection>]
+Open a query tab to the named connection or prompt for it if none given
+.TP
+\fB\-\-admin\fR <instance>
+Open a administration tab to the named instance
+.TP
+\fB\-\-upgrade\-mysql\-dbs\fR
+Open a migration wizard tab
+.TP
+\fB\-\-model\fR <model file>
+Open the given EER model file
+.TP
+\fB\-\-open\fR <file>
+Open the given file at startup
+.TP
+\fB\-\-run\fR <script>
+Execute the given code in default language for GRT shell
+.TP
+\fB\-\-run\-python\fR <script>
+Execute the given code in Python
+.TP
+\fB\-\-run\-lua\fR <script>
+Execute the given code in Lua
+.TP
+\fB\-\-migration\fR
+Open the Migration Wizard tab
+.TP
+\fB\-\-quit\-when\-done\fR
+Quit Workbench when the script is done
+.TP
+\fB\-\-log\-to\-stderr\fR
+Also log to stderr
+.TP
 \fB\-\-help\fR, \fB\-h\fR
 Show command line options and exit
 .TP
 \fB\-\-log\-level=\fR<level>
 Valid levels are: error, warning, info, debug1, debug2, debug3
 .TP
-\fB\-\-model\fR <model file>
-Open the given EER model file
-.TP
-\fB\-\-nologo\fR
-Do not display the splash screen
-.TP
-\fB\-\-query\fR <connection>
-Open a query tab to the named connection
-.TP
-\fB\-\-quit\-when\-done\fR
-Quit Workbench when the script is done
-.TP
-\fB\-\-run\fR <script>
-Execute the given code in default language for GRT shell
-.TP
-\fB\-\-run\-lua\fR <script>
-Execute the given code in Lua
-.TP
-\fB\-\-run\-python\fR <script>
-Execute the given code in Python
-.HP
 \fB\-\-verbose\fR, \fB\-v\fR
 Enable diagnostics output
 .TP
 \fB\-\-version\fR
 Show Workbench version number and exit
-.SH "SEE ALSO"
-The full documentation for
-.B MySQL
-is maintained as a Texinfo manual.  If the
-.B info
-and
-.B MySQL
-programs are properly installed at your site, the command
-.IP
-.B info MySQL
-.PP
-should give you access to the complete manual.
